# chrome-bridge

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.claude/skills/chrome-bridge/: SKILL.md
.github/workflows/: test.yml
bridge/: __init__.py  api.py  cli.py  server.py
bridge/extension/: csp-bypass.js
docs/: SKILL.md  claude-code-setup.md  store-listing.md
extension/: PRIVACY.md  background.js  manifest.json
obsidian/: Architecture Decision - HTTP over File IPC.md  GitHub Setup.md  Home.md  Port Allocation.md  Release v4.0.md  Roadmap.md
obsidian/.obsidian/: app.json  workspace.json
obsidian/体验/: Claude Code Integration.md  Platform Support.md  User Journey.md
obsidian/发布/: Changelog.md  GitHub Setup.md  Release v4.0 Checklist.md
obsidian/设计/: Architecture Overview.md  E-commerce Code Removal.md  Port Allocation.md
obsidian/问题/: Known Issues.md
scripts/: chrome-bridge.service  com.chrome-bridge.plist  install_service.sh  launch_silent.vbs  start_bridge.bat  start_bridge.sh  status_bridge.sh
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_server.py
