[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "chrome-bridge"
version = "4.0.0"
description = "AI-to-Browser bridge: Let AI coding agents control your real Chrome browser via WebSocket"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
chrome-bridge = "bridge.cli:main"

[tool.setuptools.packages.find]
include = ["bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
