[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "chrome-bridge"
version = "1.0.0"
description = "AI-to-Browser bridge — Let AI coding agents control your real Chrome browser"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Yawen Cao", email = "bobcyw@163.com"},
]
keywords = [
    "browser",
    "automation",
    "chrome",
    "ai-agents",
    "claude-code",
    "websocket",
    "chrome-extension",
    "browser-automation",
    "web-automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/bobcyw/chrome-bridge"
Repository = "https://github.com/bobcyw/chrome-bridge"
Issues = "https://github.com/bobcyw/chrome-bridge/issues"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
chrome-bridge = "bridge.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["bridge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
